# inspectpd

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  main.py  plot_cat.R  pyproject.toml  setup.py
.github/workflows/: python-package.yml  release.yml
inspectpd/: __init__.py
inspectpd/data/: tech.csv
inspectpd/inspect/: inspect_cat.py  inspect_cor.py  inspect_imb.py  inspect_mem.py  inspect_na.py  inspect_num.py  inspect_types.py
inspectpd/inspect_object/: inspect_object.py
inspectpd/plot/: plot_cat.py  plot_cor.py  plot_imb.py  plot_na.py  plot_num.py  utils.py  view.py  view_cat.py  view_cor.py  view_imb.py  view_mem.py  view_na.py  view_num.py  view_types.py
inspectpd/tests/: test_inspect_cat.py  test_inspect_na.py  test_inspect_types.py
inspectpd/view/: utils.py  view_cat.py  view_cor.py  view_imb.py  view_mem.py  view_na.py  view_types.py
inspectpy/inspect/: inspect_imb.py  inspect_mem.py  inspect_na.py  inspect_types.py
inspectpy/inspect_object/: inspect_object.py
inspectpy/plot/: plot_mem.py  plot_types.py  show_plot.py
src/inspectpd/: __init__.py
src/inspectpd/inspect/: inspect_cat.py  inspect_cor.py  inspect_imb.py  inspect_mem.py  inspect_na.py  inspect_num.py  inspect_types.py
src/inspectpd/inspect_object/: inspect_object.py
src/inspectpd/view/: utils.py  view_cat.py  view_cor.py  view_imb.py  view_mem.py  view_na.py  view_num.py  view_types.py
tests/: test_inspect_cat.py  test_inspect_na.py  test_inspect_types.py
