[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "inspectpd"
dynamic = ["version"]
description = "Inspection, comparison and visualisation of pandas data frames"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Alastair Rushworth", email = "alastairmrushworth@gmail.com" },
]
keywords = ["pandas", "dataframe", "eda", "summary", "visualisation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "pandas",
    "plotnine",
    "scipy",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/alastairrushworth/inspectpd"
Repository = "https://github.com/alastairrushworth/inspectpd"
Issues = "https://github.com/alastairrushworth/inspectpd/issues"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff>=0.6",
    "pre-commit",
    "build",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/inspectpd"]

[tool.hatch.build.targets.sdist]
include = ["src/inspectpd", "tests", "README.md", "LICENSE.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
# The formatter owns line length; E501 otherwise only fires on un-wrappable
# comments, docstrings and long literals that ruff-format leaves untouched.
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["inspectpd"]
